[package]
name = "health-notifications"
authors = ["FlooferLand"]
repository = "https://github.com/FlooferLand/health-notifications"
license-file = "LICENSE.md"
version = "0.1.0"
edition = "2024"

[dependencies]
clokwerk = "0.4"
tray-icon = "0.19"
notify-rust = "4"
tao = "0.31"
windows = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
